--- a/index.html
+++ b/index.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Education ecosystem: Site down</title>
-    <style>
-        .container {
-            height: 100vh;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
 
-        img {
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+  <link rel="shortcut icon" href="favicon.ico">
+  <title>Education ecosystem: Site down</title>
+  <style>
+    body {
+      font-family: "Roboto";
+    }
 
-        }
-    </style>
-  </head>
-  <body>
+    header {
+      display: flex;
+      flex-direction: row-reverse;
+    }
+
+    .container {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <span style="padding: 20px"> Twitter: <a href="https://twitter.com/eduecosystem1"
+        target="_blank">@eduecosystem1</a></span>
+  </header>
+  <section>
     <div class="container">
-      <img src="site-down.jpg"  />
+      <a href="https://twitter.com/eduecosystem1" target="_blank"> <img src="site-down.jpg" /></a>
     </div>
-  </body>
+  </section>
+</body>
+
 </html>
