--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
       font-family: "Roboto";
     }
 
-    header {
+    footer {
       display: flex;
-      flex-direction: row-reverse;
+      justify-content: end;
     }
 
     .container {
       width: 100%;
       display: flex;
+      padding: 10px;
       justify-content: center;
       align-items: center;
     }
@@ -28,15 +29,20 @@
 </head>
 
 <body>
-  <header>
-    <span style="padding: 20px"> Twitter: <a href="https://twitter.com/eduecosystem1"
-        target="_blank">@eduecosystem1</a></span>
-  </header>
   <section>
     <div class="container">
       <a href="https://twitter.com/eduecosystem1" target="_blank"> <img src="site-down.jpg" /></a>
     </div>
   </section>
+
+  <footer>
+    
+    <span style="padding: 20px"> For support related questions, send us a message to: <a
+      href="mailto:support@education-ecosystem.com" target="_blank">support@education-ecosystem.com</a></span>
+    <span style="padding: 20px"> Twitter: <a href="https://twitter.com/eduecosystem1"
+        target="_blank">@eduecosystem1</a></span>
+        
+  </footer>
 </body>
 
 </html>
